# cppPlayground

./: CMakeLists.txt
data/: test.ini
lib/inih/builddir/meson-info/: meson-info.json
lib/inih/builddir/meson-logs/: meson-log.txt
script/: compile.sh  compileDyn.sh  createSO.sh  run.sh
src/: inihandler.cpp  inihandler.hpp  main.cpp  main_with_Dll.cpp
